test/error/parse/ExpectVarRecordOrPointer.mod
MODULE ExpectVarRecordOrPointer;
VAR i: INTEGER;
BEGIN
  i();
END ExpectVarRecordOrPointer.
